variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:5: error: '(' expected but identifier found.
  if estSurOrange() caseOrange = caseOrange + 1
     ^RunHalf:6: error: illegal start of simple expression
} 
^RunHalf:8: error: ')' expected but '}' found.
	}
        ^